--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,5 +1,8 @@
 {
     "lang": "English",
+    "globals": {
+        "update": "تعديل", "cancel": "إلغاء", "add": "إضافة", "confirm": "تأكيد","deleteText": "هل انت متأكد من الحذف؟ ", "deleteTitle": "حذف عنصر ", "successDelete": "تم الحذف بنجاح","ToastPosition": "BOTTOM_LEFT", "wentWrong": "حدث حطأ ما", "delete": "حذف","close": "إغلاق", "saveChanges": "حفظ التغييرات"
+    },
     "colors": { "White":"أبيض",
         "Black":"أسود",
         "Blue":"أزرق",
@@ -24,6 +27,7 @@
     "routes":{"addProduct": "إضافة منتج", "updateProduct": "تعديل منتج", "Products": "المنتجات", "myProducts": "المنتجات الخاصة بي", "Home": "الرئيسية"},
     "register": {"register": "التسجيل", "createAccount": "أنشئ حسابك",  "storeName": "اسم المتجر", "yourEmail": "البريد الإلكتروني الخاص بحسابك على هورايزن", "amman": "عمان", "mobileNumber": "رقم الهاتف", "caption": "الشرح", "about": "عن المتجر", "choosePic": "إختر صورة لمتجرك","createBtn": "أنشئ حساب", "alreadyRegistered": "لديك حساب بالفعل", "login": "تسجيل دخول", "notTitle": "لم يتم إيجاد المستخدم", "notText": "لا يوجد حساب مرتط بالبريد الإلكتروني المرفق", "existsTitle": "الحساب مسجل بالفعل", "existsText": "أنت بالفعل تمتلك حساب بائع مرتبط بالبريد الإلكتروني المرفق"},
     "login": {"login": "تسجيل دخول", "signin": "سجل دخول الى حسابك", "email": "البريد الإلكتروني", "password": "كلمة المرور", "forgotPassword": " نسيت كلمة المرور؟", "signup": "تسجيل حساب", "registerText": "يمكنك الآن التسجيل كبائع ونشر منتجاتك ، ثم الوصول إلى المزيد من العملاء والبيع بسهولة وكسب المال معنا.", "registerNow": "سجل حساب الآن!"},
-    "account": {"settings": "إعدادات الحساب", "address": "العنوان", "payment": "الدفع", "addressDetails":{"add": "اضافة عنوان", "firstName": "الإسم الأول", "lastName": "الإسم الأخير", "city":"المدينة", "mobile": "رقم التلفون", "region": "المنطقة", "building": "رقم/اسم المبنى", "apartment":"رقم المكتب", "delete": "حذف", "update":"تعديل", "cancel": "إلغاء","street": "الشارع", "confirm": "تأكيد","submit":"إضافة","deleteText": "هل انت متأكد من حذف العنوان", "deleteTitle": "حذف العنوان", "successDelete": "تم الحذف بنجاح"}} 
+    "account": {"settings": "إعدادات الحساب", "address": "العنوان", "payment": "حساب التحويل", "addressDetails":{"add": "اضافة عنوان", "firstName": "الإسم الأول", "lastName": "الإسم الأخير", "city":"المدينة", "mobile": "رقم التلفون", "region": "المنطقة", "building": "رقم/اسم المبنى", "apartment":"رقم المكتب", "delete": "حذف", "update":"تعديل", "cancel": "إلغاء","street": "الشارع", "confirm": "تأكيد","submit":"إضافة","deleteText": "هل انت متأكد من حذف العنوان", "deleteTitle": "حذف العنوان", "successDelete": "تم الحذف بنجاح"}} ,
+    "bankAccount": {"addAccount": "إضافة حساب", "bankAccount": "حساب بنكي", "cliq": "كليك", "ewallet": "محفظة إلكترونية", "transferAccount": "حساب التحويل", "reference": "الرقم المرجعي", "title": "العنوان"}
 
 }
